fixed overflow problem

--- a/src/app.css
+++ b/src/app.css
@@ -81,7 +81,7 @@
 body{
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
   background-color: #F0F2F5;
 }
